feat: 入口页面及登录页面完成

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -4,6 +4,18 @@
         "home": "首页",
         "mine": "我的"
     },
+    "login": {
+        "loginTitle": "登录账号",
+        "registerTitle": ""
+    },
+    "entry": {
+        "title1": "多币种钱包",
+        "tip1": "支持多种主流币种 跨链交易 方便高效",
+        "title2": "多重保障 更加安全",
+        "tip2": "私钥多重保护 账户安全无需担心",
+        "title3": "欢迎来到Bag Pay",
+        "tip3": "安全放心 方便快捷"
+    },
     "home": {
 
     }
