--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -19,6 +19,7 @@
         "findAccountTitle": "找回账号",
         "findAccountTip": "找回账号登录密码",
         "vCode": "验证码",
+        "imgCode": "图形码",
         "againEnter": "再次输入",
         "payPassword": "安全密码",
         "done": "完 成",
