feat: otc发布广告静态页面

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -7,7 +7,42 @@
     "common": {
         "send": "发 送",
         "save": "保 存",
-        "name": "名称"
+        "name": "名称",
+        "poptip": "温馨提示",
+        "waitSend": "等待发送",
+        "waitReview": "等待审核",
+        "waitComfirm": "等待确认",
+        "sending": "发送中",
+        "sented": "已发送",
+        "canceled": "已取消",
+        "rejected": "已拒绝",
+        "done": "已完成",
+        "typeNormal": "链上转入",
+        "typeInternal": "内部转入",
+        "withdrawTypeNormal": "链上转出",
+        "withdrawTypeInternal": "内部转出",
+        "typeNoResponse": "一直不响应",
+        "typePaidButNotRelease": "已付款不放币",
+        "typeMaliciousOrder": "恶意下单",
+        "typeFalsePaid": "恶意点击已付款",
+        "stateNoProcess": "未处理",
+        "stateProcessing": "处理中",
+        "stateReject": "驳回",
+        "stateReleaseCoin": "放币",
+        "stateCancelDeal": "取消订单",
+        "stateSolvedByUser": "用户已自行解决",
+        "stateCanceled": "已撤消",
+        "stateTrading": "交易中",
+        "statePayed": "已支付",
+        "typeBuyer": "买家",
+        "typeSeller": "卖家",
+        "sideBuy": "买入",
+        "sideSell": "卖出"
+    },
+    "refresh": {
+        "pulling": "下拉即可刷新...",
+        "loosing": "释放即可刷新..",
+        "loading": "加载中..."
     },
     "login": {
         "loginTitle": "登录账号",
