--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -76,7 +76,8 @@
     },
     "home": {
         "assets": "资产",
-        "paymentTip": "扫描二维码，转入"
+        "paymentTip": "扫描二维码，转入",
+        "addSymbol": "添加币种"
     },
     "mine": {
         "safeSetting": "安全认证",
@@ -107,6 +108,7 @@
         "transferOut": "转出",
         "paymentTip": "扫描二维码，转入",
         "chequesAddr": "收款地址",
+        "memoAddr": "附加地址",
         "setPaymentTitle": "管理钱包",
         "addTitle": "添加地址",
         "selectSymbol": "选择币种"
