feat: 后端错误提示

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -134,5 +134,57 @@
         "setPaymentTitle": "管理钱包",
         "addTitle": "添加地址",
         "selectSymbol": "选择币种"
+    },
+    "error": {
+        "ERR_SERVER_ERROR": "服务器内部错误",
+        "ERR_PARAMS_ERROR": "参数错误",
+        "ERR_NO_PERMISSION": "无权限",
+        "ERR_NOT_FOUND": "记录未找到",
+        "ERR_ALREADY_PROCESSED": "已处理过",
+        "ERR_ALREADY_EXISTED": "已存在",
+
+        "ERR_PASSPORT_ALEARDY_EXIST": "账号已存在",
+        "ERR_BAD_PASSPORT": "账号格式不正确",
+        "ERR_BAD_EMAIL": "邮箱格式不正确",
+        "ERR_BAD_PHONE": "手机格式不正确",
+        "ERR_BAK_NICKNAME": "昵称格式不正确",
+        "ERR_BAD_PASSPORT_OR_PASSWORD": "用户名或密码错误",
+        "ERR_NICKNAME_ALEARDY_EXIST": "昵称已存在",
+        "ERR_USER_DISABLED": "用户已禁用",
+        "ERR_BAD_VERIFICATION_CODE": "验证码错误",
+
+        "ERR_BALANCE_NOT_ENOUGH": "余额不足",
+        "ERR_FROZEN_NOT_ENOUGH": "冻结的额度不足，系统故障",
+        "ERR_VOLUME_NOT_ENOUGH": "数量不足",
+        "ERR_COIN_DEPOSIT_DISABLE": "当前币种暂停充币",
+        "ERR_COIN_WITHDRAW_DISABLE": "当前币种暂停提币",
+        "ERR_AMOUNT_TOO_SMALL": "金额太小",
+        "ERR_AMOUNT_TOO_LARGE": "金额太大",
+        "ERR_BAD_PASSWORD": "密码不正确",
+        "ERR_BAD_PAY_PASSWORD": "支付密码不正确",
+        "ERR_BAD_EMAIL_CODE": "邮箱验证码不正确",
+        "ERR_BAD_PHONE_CODE": "手机验证码不正确",
+        "ERR_BAD_GA_CODE": "google验证码不正确",
+        "ERR_BAD_VERIFY_CODE_TYPE": "验证码类型不正确",
+        "ERR_INTERVAL_TO_SHORT": "时间间隔太短",
+        "ERR_TOO_FREQUENT": "操作过于频繁",
+        "ERR_SEND_FAILED": "发送失败",
+        "ERR_SELF_ADDRESS": "自己的地址",
+        "ERR_BAD_ADDRESS": "地址不正确",
+        "ERR_NOT_TRUST_ADDRESS": "不是可信地址",
+        "ERR_BAD_STATE": "状态不正确",
+        "ERR_PHONE_NOT_BOUND": "手机号未绑定",
+        "ERR_EMAIL_NOT_BOUND": "邮箱未绑定",
+        "ERR_NOT_INTERNAL_ADDRESS": "不是平台内部地址",
+        "ERR_PRICE_CHANGED": "价格已发生变化",
+        "ERR_COIN_OTC_NOT_ENABLED": "该种种未开放otc",
+
+        "ERR_NOT_VERIFICATION": "未实名",
+        "ERR_MERCHANT_BAIL_COIN_NOT_CONFIG": "商家保证金币种未配置",
+        "ERR_MERCHANT_BAIL_AMOUNT_NOT_CONFIG": "商家保证金数量未配置",
+        "ERR_NOT_OTC_MERCHANT": "不是otc商家",
+        "ERR_BAD_OTC_MERCHANT_STATUS": "otc商家状态不正常",
+
+        "ERR_BAD_COIN_SYMBOL": "币种标识不正确"
     }
 }
