--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -59,6 +59,7 @@
         "loginTip": "你将会拥有多链钱包",
         "phone": "手机号",
         "password": "登录密码",
+        "oldPwd": "老密码",
         "findAccount": "找回密码",
         "login": "登 录",
         "findAccountTitle": "找回账号",
@@ -185,6 +186,15 @@
         "ERR_NOT_OTC_MERCHANT": "不是otc商家",
         "ERR_BAD_OTC_MERCHANT_STATUS": "otc商家状态不正常",
 
-        "ERR_BAD_COIN_SYMBOL": "币种标识不正确"
+        "ERR_BAD_COIN_SYMBOL": "币种标识不正确",
+
+        "phoneErr": "请输入正确的手机号",
+        "pwdErr": "请输入大于6位小于16位字母或数字的密码",
+        "pwd2Err": "两次密码输入不一致",
+        "emailErr": "请输入正确的邮箱",
+        "icCardErr": "请输入正确的身份证号",
+        "nameErr": "请输入真实姓名",
+        "payErr": "请输入6位数字密码",
+        "codeErr": "请输入4位数字验证码"
     }
 }
