增加安全认证

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -8,6 +8,14 @@
         "send": "发 送",
         "save": "保 存",
         "cancle": "取 消",
+        "del": "删 除",
+        "ok": "确 定",
+        "safeVeirfy": "安全验证",
+        "enterPhoneCode": "请输入短信验证码",
+        "enterEmailCode": "请输入邮箱验证码",
+        "enterPayCode": "请输入安全密码",
+        "enterPwdCode": "请输入登录密码",
+        "enterGoogleCode": "请输入google密码",
         "name": "名称",
         "noMore": "暂无更多",
         "noData": "暂无数据",
@@ -132,6 +140,7 @@
         "paymentTip": "扫描二维码，转入",
         "chequesAddr": "收款地址",
         "memoAddr": "附加地址",
+        "addrDetail": "地址详情",
         "setPaymentTitle": "管理钱包",
         "addTitle": "添加地址",
         "selectSymbol": "选择币种"
