--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -63,7 +63,11 @@
         "stateFinished"  : "已完成",
         "otcStateCanceled"  : "已取消",
         "stateClosed"    : "已关闭",
-        "statePlatClosed": "平台强制关闭"
+        "statePlatClosed": "平台强制关闭",
+        "appealTypeNoResponse"         : "一直不响应",
+        "appealTypePaidButNotRelease"  : "已付款不放币",
+        "appealTypeMaliciousOrder"     : "恶意下单",
+        "appealTypeFalsePaid"          : "恶意点击已付款"
     },
     "refresh": {
         "pulling": "下拉即可刷新...",
