feat: 扫描二维码

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -7,6 +7,9 @@
     "common": {
         "send": "发 送",
         "save": "保 存",
+        "scan": "扫一扫",
+        "bFlash": "闪光灯",
+        "scanPicture": "相  册",
         "cancle": "取 消",
         "all": "全部",
         "del": "删 除",
@@ -234,5 +237,91 @@
         "payErr": "请输入6位数字密码",
         "codeErr": "请输入4位数字验证码",
         "emptyErr": "不能为空"
-    }
+    },
+    "otcProtoWord": {
+        "protoWord2": "【前言】",
+        "protoWord3": "欢迎您使用OTC平台提供的广告方服务！",
+        "protoWord4": "本协议由OTC（以下简称“平台”或“我们”）与平台上的“广告方”（以下简称“您”）之间订立。",
+        "protoWord4_1": "一旦您通过我们的网站、API（如有）或移动应用程序等的相关界面开始申请或使用广告发布权限时，即表示您已充分仔细阅读、理解和自愿接受本协议及其相关服务页面中的各类相关规则公告等，也包括我们对本协议随时所做的任何修改、修订或者变更及未来可能不时发布的任何新的规则制度等（以上统称“本协议”）。",
+        "protoWord5": "如您不同意本协议及修改变更后的规则内容，请您立即停止使用本平台的广告方服务并向平台主动申请解除广告方资格。",
+        "protoWord6": "【重要声明】",
+        "protoWord7": "您一经申请成功开通广告发布权限后，即需同样受本协议、《",
+        "protoWord7_1": "》、及平台相关的各类规则公告的约束。",
+        "protoWord8": "本规则自发布之日起正式实施，并将不时予以修改或完善，修改或完善后的新规则自公布之日起即对您生效；如本协议中的部分内容与平台之后公示更新的规则内容不一致的，以届时新发布的具体规则为准。",
+        "protoWord9": "广告方作为平台上的独立自主交易方，其虽经平台审核认证并锁定保证资产后享有广告发布权限。但并不代表广告方100%可信，也不代表本平台与广告方之间存在任何保证关系，我们不对广告方的任何违反平台规则制度的行为做任何品牌或信用背书，亦不对因广告方自身产生的任何不良后果承担连带责任。",
+        "protoWord10": "广告方应保证使用本协议项下的服务完全系出于合法目的的使用，严禁您利用本平台及其享受的权限之便利从事洗钱、走私、商业贿赂、恶意操纵市场或干扰交易系统等一切非法交易行为或不正当的活动。如经平台查实您违反上述规定的，我们有权对您采取包括但不限于账户限制、冻结、解除广告方资格、扣除保证资产、移送司法机关等多项惩处措施，并不对由此致使您或相关第三方产生的任何损失承担任何责任。",
+        "protoWord13": "一、【适用范围】",
+        "protoWord14": "本协议项下的服务适用于以下三类情形的用户，以下统称“广告方”:",
+        "protoWord15": "通过平台申请认证的商户，即已正式获得“广告发布资格”的权限；",
+        "protoWord16": "虽申请认证材料尚未通过审核但已在平台锁定一定保证资产的用户；",
+        "protoWord17": "主动申请解除广告方资格的认证尚未通过审核且保证资产仍锁定在平台账户中的用户。",
+        "protoWord18": "二、【服务内容】",
+        "protoWord19": "在您申请并通过平台审核认证后，获得广告发布资格，正式成为平台的广告方后，您在平台的普通用户权限范围之外，还会额外享受平台为您提供的以下服务内容：",
+        "protoWord20": "广告发布服务：",
+        "protoWord21": "为方便广告方用户更加便捷、灵活地进行交易，您成为广告方后会享有相应的广告发布权限。",
+        "protoWord22": "一对一服务：",
+        "protoWord23": "为提高交易效率及有效解决可能遇到申诉订单处理，我们面向广告方提供一对一专属服务。",
+        "protoWord24": "其他：",
+        "protoWord25": "平台根据经营政策变化的调整，可能针对广告方随时推出其他的新产品服务，亦可能随时对现有的产品服务进行调整升级，具体服务内容更新请以网站服务页面公示及产品界面展示的为准。",
+        "protoWord26": "三、【认证申请】",
+        "protoWord27": "为了提高交易的安全性和广告方用户身份的可信度，本平台向您提供广告方资格申请的认证服务。",
+        "protoWord28": "认证材料：",
+        "protoWord29": "具体您在申请开通广告发布权限过程中，需要提供以下认证材料：手机号码、邮箱号码、微信号码、紧急联系人、紧急联系人号码、与本人关系、常住地址；本平台为合规而要求提交的其它材料。但我们在审核中不对用户身份识别结果的准确性和绝对真实性做任何保证。",
+        "protoWord30": "申请流程",
+        "protoWord31": "您提交广告方申请材料，申请材料详见本条3.1款；",
+        "protoWord32": "在收到您提交的申请材料之后，本平台将根据这些材料对您进行KYC和反洗钱等合规审查；",
+        "protoWord33": "在通过平台的审核认证之后，您需向广告方所属的保证资产账户锁定约定数量的保证资产，但在解除广告方资格前您将无法对该账户内资产进行任何交易或划转。",
+        "protoWord34": "申请说明",
+        "protoWord35": "申请材料的更新：本申请服务是由本平台提供的一项身份识别服务。除非本协议另有约定，一旦您在本平-台账户完成了申请，相应的身份信息和申请结果将不因任何原因被修改或取消；如果您的身份信息在完成认证后发生了变更，您应向本平台提供相应有权部门出具的凭证，由本平台协助您变更您账户对应的申请信息。",
+        "protoWord36": "申请资料的管理：您在申请时提交给本平台的认证资料，即不可撤销地授权由本平台保留。本平台承诺除法定或约定的事由外，不公开、编辑或透露您的认证资料，且不将保存在本平台的非公开内容用于商业目的，但您授权本平台透露的相关信息以下情形除外：1.本平台向国家司法及行政机关提供；2.本平台向我们的关联企业提供；3.第三方和本平台一起为用户提供服务时，该第三方向您提供服务所需的相关信息（不包括您的银行账户信息）；4、基于解决您与第三方民事纠纷的需要，本平台有权向该第三方提供您的身份信息。其余的隐私保护请以本平台公示的隐私政策条款为准。",
+        "protoWord37": "四、【保证资产】",
+        "protoWord38": "保证资产内容：",
+        "protoWord39": "为保障您在本平台的交易安全及顺畅，在广告方通过平台KYC与反洗钱审查后，本平台将要求广告方在其平台专属账户中存入并锁定一定的保证资产作为交易保证。 具体保证资产数额和资产类型要求会根据您所在国籍及您在平台广告发布权限的不同而有所不同，具体以本平台广告方认证的个人信息中所展示的为准。",
+        "protoWord40": "扣除保证资产的情形：",
+        "protoWord41": "本平台上的广告方如出现以下情形时，我们有权对您的保证资产进行部分或全部扣除等处置：",
+        "protoWord42": "广告方在交易过程中发生纠纷，且广告方被平台判定存在过错且应承担责任并履行相应义务，而广告方经联系通知后不予配合而致使其他用户受损的；",
+        "protoWord43": "广告方严重或多次违反《广告方平台管理制度》而被平台相应实施细则予以处罚的；",
+        "protoWord44": "广告方利用本平台从事任何洗钱、非法变相逃汇套汇、恶意操纵交易价格、恶意破坏交易秩序等非法行为或不道德行为；",
+        "protoWord45": "广告方对外有擅自利用平台品牌进行不实宣传或恶意误导关联等行为，使平台的品牌声誉受损的；",
+        "protoWord46": "广告方擅自租借他人多张卡、使用他人名义的银行卡进行收付款或从事其他洗钱等非法目的，从而导致相关用户或第三方受损的；",
+        "protoWord47": "广告方存在异常被申诉待处理的订单，但因其他客观原因（如被警方刑拘等）导致确实无法联系到本人的；",
+        "protoWord48": "广告方存在其他违反本协议或本平台上的任何法律文件规定或交易规则的；",
+        "protoWord49": "收付款方式被冻结后，不及时按规定向平台报备的；",
+        "protoWord50": "广告方在擅自跨平台交易中，将其他平台收付款账户留存或设置为与平台上相同的收付款账户，未做好风险资金的有效隔离，导致平台其他用户账户被冻结；",
+        "protoWord51": "其他经平台合理判定需要扣除保证资产的情形。",
+        "protoWord52": "具体保证资产的扣除数额以平台风控评估后根据实际影响后果的严重性具体而定：",
+        "protoWord53": "一般情况下，扣除额以补偿受损用户的实际损失为限。但如果造成的损失后果已经超过保证资产的覆盖范围的，我们有权在全部扣除现有保证资产外，并额外要求您重新追加一定数额的保证资产，追加额以平台最终确认为准。",
+        "protoWord54": "如经平台查实有以下特殊情形的，我们将有权直接扣除您的全额保证资产：",
+        "protoWord55": "平台有合理证据证明广告方直接参与或协助洗黑钱或有其他非法不正当行为的；",
+        "protoWord56": "在KYC等基本风控能力不健全的平台做跨平台OTC交易时，被核实出与相关洗钱事件有关联的；",
+        "protoWord57": "私下拉群或参与社群交易，未对交易对手方做KYC等基本信息留存资料的，致使相关不合法的资产流入平台的。",
+        "protoWord58": "广告方打款导致3人及以上的用户银行卡冻结，拒不配合处理的。",
+        "protoWord59": "使用银行卡收付款的广告方，如其上述银行卡多次被冻结的，但均未按规定不向平台进行报备；或其银行卡被冻结未报备进而对平台其他用户造成严重损失或不良后果的。",
+        "protoWord60": "五、【解除广告方资格】",
+        "protoWord61": "广告方主动申请解除广告发布权限",
+        "protoWord62": "如广告方因自身原因需要解除认证的，须向本平台提交解除广告方资格的申请。在收到解除申请后，如本平台确认广告方不涉及任何未决纠纷的，或无不良记录等情况的,本平台将于2个工作日内完成认证解除，且将保证资产账户内剩余资产划转至您指定的接收账户中。",
+        "protoWord63": "平台单方解除广告发布权限",
+        "protoWord64": "广告方如出现下列情形之一的，本平台有权单方解除您的广告方资格：",
+        "protoWord65": "在过往交易中多次被本平台用户投诉的；",
+        "protoWord66": "提交的申请材料中存在任何虚假信息的；",
+        "protoWord67": "交易中出现欺诈等不诚信行为的或出现恶意抹黑平台声誉的负面舆论的；",
+        "protoWord68": "不配合本平台客服处理订单或故意拖延客服处理订单的；",
+        "protoWord69": "恶意利用本平台规则漏洞进行牟利的；",
+        "protoWord70": "租借或买卖他人卡进行交易，被平台判定涉嫌洗钱的，会直接解除您的广告方资格；如有确凿证明认定您直接参与洗钱的，我们会直接主动向相关司法机关进行举报。",
+        "protoWord71": "广告方擅自到具备基本KYC风控能力的平台或高危的场外社群交易时，其关联账号或小号被平台核实涉嫌洗钱交易的，平台有权直接解除该广告方资格。如因此导致其他的与之交易的用户账户被冻结的，除解除广告方资格并扣除保证资产外，您还应协助配合其他用户进行账号解冻；",
+        "protoWord72": "擅自跨平台OTC交易的广告方，为避免您将场外来源不合法的资金引入本平台，请做好交易对手方的KYC和AML等风险防控识别措施；同时做好有效的资金隔离，并在跨其他平台交易中不使用或设置留存与平台上相同的收付款账户。如广告方在跨平台交易中未做好上述收付款账户隔离，而引发本平台用户冻结，我们将有权选择直接解除您的广告方资格。",
+        "protoWord73": "经平台核查，广告方的收付款账户多次被冻结后未按要求向平台报备的；",
+        "protoWord74": "存在本平台认定的不符合公序良俗、公平交易或违反法律法规的其他行为。",
+        "protoWord75": "六、【责任限制与免除】",
+        "protoWord76": "您作为广告方除应遵守平台《",
+        "protoWord76_1": "》中约定的责任限制与免除外，还应仔细阅读并遵守以下责任免除或限制条款：",
+        "protoWord77": "场外资金脉络复杂加之数字资产交易的特殊性，您需要格外注意反洗钱方面的风险。为保证自身的交易和资产安全，您需严格按照流程及规则提示进行交易，并按照KYC和反洗钱的要求做好对交易方的身份审核认证，否则您将可能因交易相对方涉嫌犯罪而面临资产冻结等风险，平台不对由此产生的损失承担任何责任。",
+        "protoWord78": "平台仅提供数字资产C2C交易的信息撮合服务，其上的买卖行为皆为用户独立、自发交易完成。整个交易过程中平台不参与其中，如您有违反平台交易规则及协议约定导致损失后果的，请自担风险，我们不对此承担任何赔偿责任。我们亦不对广告方的任何违反规则的行为做任何品牌或信用背书，亦不对因广告方自身产生的任何不良后果承担连带责任。",
+        "protoWord79": "为避免不法分子利用本平台从事洗钱、变相逃汇套汇等非法行为，广告方用户均应避免将场外来源不合法的资产引入本平台（尤其，广告方在擅自跨平台OTC交易提币时应对自行做好对交易相对方的风险识别控制及资金账户的有效隔离）。否则，如经平台查实，用户涉嫌有利用本平台来进行多种形式（如故意租借或买断多张他人卡进行洗钱交易、在大宗区擅自违规违禁交易美元等））的非法或不道德行为，我们有权对您采取包括但不限于账户限制、冻结、解除广告方资格、扣除保证资产、移送司法机关等多项惩处措施，并不对由此致使您或相关第三方产生的任何损失承担任何责任。",
+        "protoWord80": "平台不鼓励您擅自租借或买卖多张他人名义卡进行交易：1.如因您租借或买卖他人卡进行洗钱致使卡的实名所有者受牵连损失的，我们不对由此产生的损失后果负责，如经查实我们有权直接将您移送司法机关，并不对由此对您造成的不利后果承担任何责任。2.如您之前使用租赁或买卖的他人卡与某用户进行过交易，现他人卡已被警方冻结的，但该用户与您交易时仍默认该卡仍有效，将钱直接打入该卡后资金被冻结受损的，您应积极配合其协助处理解冻。如您拒绝履行相关配合义务的，平台有权视情况扣除您的保证资产以作为对受损方用户的弥补，并不对由此致使您产生的损失承担任何赔偿责任。6.5为实现身份信息审查，本平台上可能包含指向第三方网站（如网上银行网站）的链接（以下简称“链接网站”）。 “链接网站”非由本平台控制， 我们对本平台中链接的任何第三方网站的任何信息、产品及业务及其他任何形式的、不属于我们的内容等不做任何保证和承诺；您如果使用第三方网站提供的任何服务、信息及产品等均为您的个人决定，因此您应当承担由此产生的一切责任。",
+        "protoWord81": "七、【其他】",
+        "protoWord82": "本协议自颁布更新之日起即对您生效，至您的广告方资格被解除且履行完毕本协议下相应的义务之日起终止；",
+        "protoWord83": "如您对本协议有任何疑问，或对于本协议中的处理方式存在任何投诉、意见，请通过以下渠道联系我们：请",
+        "protoWord84": "本协议的最终解释权归本平台所有。"
+      }
 }
