--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -6,6 +6,7 @@
     },
     "common": {
         "send": "发 送",
+        "send2": "发送",
         "save": "保 存",
         "scan": "扫一扫",
         "bFlash": "闪光灯",
@@ -14,6 +15,9 @@
         "all": "全部",
         "del": "删 除",
         "ok": "确 定",
+        "repeat": "重发",
+        "available": "可用",
+        "frozen": "冻结",
         "safeVeirfy": "安全验证",
         "enterPhoneCode": "请输入短信验证码",
         "enterEmailCode": "请输入邮箱验证码",
@@ -90,14 +94,15 @@
         "phone": "手机号",
         "email": "邮箱",
         "password": "登录密码",
-        "oldPwd": "老密码",
+        "oldPwd": "旧密码",
+        "newPwd": "请输入新密码",
         "findAccount": "找回密码",
         "login": "登 录",
         "findAccountTitle": "找回账号",
         "findAccountTip": "找回账号登录密码",
         "vCode": "验证码",
         "imgCode": "图形码",
-        "againEnter": "再次输入",
+        "againEnter": "再次确认密码",
         "payPassword": "安全密码",
         "done": "完 成",
         "send": "发送",
@@ -122,7 +127,7 @@
         "addSymbol": "添加币种"
     },
     "mine": {
-        "safeSetting": "安全认证",
+        "safeSetting": "安全设置",
         "realName": "实名认证",
         "systemSetting": "系统设置",
         "hideAmount": "隐藏余额",
@@ -139,7 +144,7 @@
         "realName5": "上传中",
         "safePass": "安全密码",
         "changePwd": "修改密码",
-        "changePwdTip": "修改账号登录密码"
+        "changePwdTip": "修改登录密码"
     },
     "payway": {
         "addpay": "添加收付款方式",
