增加语言切换

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -18,6 +18,8 @@
         "repeat": "重发",
         "available": "可用",
         "frozen": "冻结",
+        "ZHcn": "简体中文",
+        "ENus": "英文",
         "safeVeirfy": "安全验证",
         "enterPhoneCode": "请输入短信验证码",
         "enterEmailCode": "请输入邮箱验证码",
@@ -135,6 +137,7 @@
         "changeLang": "切换语言",
         "unitPrice": "计价单位",
         "logout": "退出账号",
+        "logoutTip": "确认退出登录",
         "feedback": "意见反馈",
         "aboutus": "关于我们",
         "realName1": "上传证件正面",
