增加忘记支付密码

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -145,7 +145,8 @@
         "realName3": "手持证件正面",
         "realName4": "上传认证视频",
         "realName5": "上传中",
-        "safePass": "安全密码",
+        "safePass": "修改安全密码",
+        "forgetSafePass": "忘记安全密码",
         "changePwd": "修改密码",
         "changePwdTip": "修改登录密码",
         "verLv1Tip": "请填写本人身份证信息。",
