--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -126,7 +126,10 @@
     "home": {
         "assets": "资产",
         "paymentTip": "扫描二维码，转入",
-        "addSymbol": "添加币种"
+        "addSymbol": "添加币种",
+        "paymentTip1": "最小转入金额：0.001USDT，小于最小金额的充值将不会上账",
+        "paymentTip2": "请勿向上述地址充值任何非USDT资产否则资产将不可找回。",
+        "paymentTip3": "充值至上述地址后，需要1个网络节点的确认才能到账。"
     },
     "mine": {
         "safeSetting": "安全设置",
@@ -146,8 +149,9 @@
         "realName4": "上传认证视频",
         "realName5": "上传中",
         "safePass": "修改安全密码",
+        "setSafePass": "设置安全密码",
         "forgetSafePass": "忘记安全密码",
-        "changePwd": "修改密码",
+        "changePwd": "修改登录密码",
         "changePwdTip": "修改登录密码",
         "verLv1Tip": "请填写本人身份证信息。",
         "verLv2Tip": "请上传本人身份证正反及本人手持身份证照片。",
