--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -20,6 +20,8 @@
         "frozen": "冻结",
         "ZHcn": "简体中文",
         "ENus": "英文",
+        "country": "国家/地区",
+        "seachCountry": "搜索国家/地区",
         "safeVeirfy": "安全验证",
         "enterPhoneCode": "请输入短信验证码",
         "enterEmailCode": "请输入邮箱验证码",
