修改发送验证码

--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -20,6 +20,7 @@
         "frozen": "冻结",
         "ZHcn": "简体中文",
         "ENus": "英文",
+        "sendSuccess": "发送成功",
         "copySuccessful": "复制成功",
         "copyUnsuccessful": "复制失败",
         "country": "国家/地区",
