--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -140,6 +140,7 @@
     },
     "mine": {
         "safeSetting": "安全设置",
+        "protocol": "用户协议",
         "realName": "实名认证",
         "resetReal": "重新认证",
         "systemSetting": "系统设置",
@@ -161,11 +162,12 @@
         "setSafePass": "设置安全密码",
         "confirmSafePass": "确认安全密码",
         "forgetSafePass": "忘记安全密码",
+        "phone": "手机号",
         "changePwd": "修改登录密码",
         "changePwdTip": "修改登录密码",
         "verLv1Tip": "请填写本人身份证信息。",
         "verLv2Tip": "请上传本人身份证正反及本人手持身份证照片。",
-        "verLv3Tip1": "我是***，证件号码是：545645645645.我自愿在bagpay注册交易，并确保账号是本人使用。",
+        "verLv3Tip1": "我是***，证件号码是：545645645645.我自愿在_mark注册交易，并确保账号是本人使用。",
         "verLv3Tip2": "我确保所有资金来源合法，已经了解并能承受全部交易风险，提取数字资产不做非法使用，也不会用本平台进行任何非法活动，例如洗钱，传销，和非法兑换外币等。"
     },
     "payway": {
@@ -388,5 +390,86 @@
         "protoWord82": "本协议自颁布更新之日起即对您生效，至您的广告方资格被解除且履行完毕本协议下相应的义务之日起终止；",
         "protoWord83": "如您对本协议有任何疑问，或对于本协议中的处理方式存在任何投诉、意见，请通过以下渠道联系我们：请",
         "protoWord84": "本协议的最终解释权归本平台所有。"
-      }
+    },
+    "mineProtocol": {
+        "protoWord2": "【_mark与用户共同确认】",
+        "protoWord3": "用户点击_mark注册页面的注册按钮并完成注册程序、获得_mark账号和密码时，视为用户与_mark已达成《_mark用户协议》(下称“本协议”)，就用户登录_mark网站使用_mark相应的存储及交易服务达成本协议的全部约定。",
+        "protoWord4": " _mark及用户均已认真阅读本协议中全部条款内容，对本协议的操作规则均已知晓、理解并接受，同意将其作为确定双方权利义务的依据。本协议内容包括本协议正文以及_mark已经发布的或将来可能发布的各类规则、声明、说明。所有规则、声明、说明为协议不可分割的一部分，与协议正文具有同等法律效力。",
+        "protoWord4_1": "本协议不涉及_mark用户与其他用户之间因数字资而产生的法律关系及法律纠纷",
+        "protoWord5": "如您不同意本协议及修改变更后的规则内容，请您立即停止使用本平台的广告方服务并向平台主动申请解除广告方资格。",
+        "protoWord6": "【重要声明】",
+        "protoWord7": "您一经申请成功开通广告发布权限后，即需同样受本协议、《",
+        "protoWord7_1": "》、及平台相关的各类规则公告的约束。",
+        "protoWord8": "本规则自发布之日起正式实施，并将不时予以修改或完善，修改或完善后的新规则自公布之日起即对您生效；如本协议中的部分内容与平台之后公示更新的规则内容不一致的，以届时新发布的具体规则为准。",
+        "protoWord9": "广告方作为平台上的独立自主交易方，其虽经平台审核认证并锁定保证资产后享有广告发布权限。但并不代表广告方100%可信，也不代表本平台与广告方之间存在任何保证关系，我们不对广告方的任何违反平台规则制度的行为做任何品牌或信用背书，亦不对因广告方自身产生的任何不良后果承担连带责任。",
+        "protoWord10": "广告方应保证使用本协议项下的服务完全系出于合法目的的使用，严禁您利用本平台及其享受的权限之便利从事洗钱、走私、商业贿赂、恶意操纵市场或干扰交易系统等一切非法交易行为或不正当的活动。如经平台查实您违反上述规定的，我们有权对您采取包括但不限于账户限制、冻结、解除广告方资格、扣除保证资产、移送司法机关等多项惩处措施，并不对由此致使您或相关第三方产生的任何损失承担任何责任。",
+        "protoWord13": "一、【定义条款】",
+        "protoWord14": "本协议项下的服务适用于以下三类情形的用户，以下统称“广告方”:",
+        "protoWord15": "“BTC/ETH/USDC/TUSD/USDT”：国际上目前通行的数字资产。",
+        "protoWord16": "“_mark”：域名为_mark，为全球数字资产玩家提供进行BTC/ETH/USDC/TUSD/USDT等数字资产的存储服务。",
+        "protoWord17": "“用户”：接受并同意本协议全部条款及_mark不时发布和更新的功能及操作规则，并予以公示。你使用或继续使用该功能即视为您同意并接受该等规则及其修订。",
+        "protoWord17_1": "“用户注册”：用户注册是指用户登录_mark网站，并按要求填写相关信息并确认同意履行相关用户协议的过程。",
+        "protoWord18": "二、【用户注册】",
+        "protoWord19": "在您申请并通过平台审核认证后，获得广告发布资格，正式成为平台的广告方后，您在平台的普通用户权限范围之外，还会额外享受平台为您提供的以下服务内容：",
+        "protoWord20": "注册资格：",
+        "protoWord21": "用户承诺：用户具有完全民事权利能力和行为能力，或虽不具有完全民事权利能力和行为能力，但点击同意注册按钮，即视为经其法定代理人同意并由其法定代理人代理注册及使用_mark服务。",
+        "protoWord22": "注册目的",
+        "protoWord23": "用户承诺：用户进行用户注册并非出于违反法律法规或破坏_mark钱包秩序的目的。",
+        "protoWord24": "注册流程",
+        "protoWord25": "用户同意根据_mark用户注册页面的要求提供有效手机号码等信息，设置_mark账号及密码，用户应确保所提供全部信息的真实性、完整性和准确性。",
+        "protoWord25_1": "用户合法、完整并有效提供注册所需信息的，有权获得_mark账号和密码，_mark账号和密码用于用户在_mark网站进行登录。",
+        "protoWord25_2": "用户获得_mark账号及密码时视为用户注册成功，用户同意接收_mark发送的与_mark网站管理、运营相关的电子邮件和/或短消息。",
+        "protoWord25_3": "用户注册成功后可进行数字资产存储，应当按要求提供本人的真实身份证号码，进行实名认证/或短消息。",
+        "protoWord26": "三、【用户服务】",
+        "protoWord27": "_mark为用户通过_mark进行数字资产交易活动提供网络交易平台服务。_mark不作为买家或是卖家参与买卖数字资产行为本身。",
+        "protoWord28": "服务内容",
+        "protoWord29": "用户有权在_mark浏览数字资产实时行情及交易信息、有权通过_mark提交数字资产交易指令并完成数字资产交易。",
+        "protoWord29_1": "用户有权在_mark查看其_mark会员账号下的信息，有权使用_mark提供的功能进行操作。",
+        "protoWord29_2": "用户有权按照_mark发布的活动规则参与_mark组织的网站活动。",
+        "protoWord29_3": "_mark承诺为用户提供的其他服务。",
+        "protoWord30": "服务规则",
+        "protoWord34_1": "用户承诺遵守下列_mark服务规则：",
+        "protoWord35": "用户应当遵守法律法规、规章、规范性文件及政策要求的规定，保证账户中所有资金和数字资产来源的合法性，不得在_mark或利用_mark服务从事非法或其他损害_mark或第三方权益的活动，如发送或接收任何违法、违规、违反公序良俗、侵犯他人权益的信息，发送或接收传销材料或存在其他危害的信息或言论，未经_mark授权使用或伪造_mark电子邮件抬头信息等。",
+        "protoWord36": "用户应当遵守法律法规应当妥善使用和保管其_mark账号及密码、资金密码、和其注册时绑定的手机号码、以及手机接收的手机验证码的安全。用户对使用其_mark账号和密码、资金密码、手机验证码进行的任何操作和后果承担全部责任。当用户发现_mark账号、密码、或资金密码、验证码被未经其授权的第三方使用，或存在其他账号安全问题时，应立即有效通知_mark，要求_mark暂停该_mark账号的服务。_mark有权在合理时间内对用户的该类请求采取行动，但对_mark采取行动前用户已经遭受的损失不承担任何责任。用户在未经_mark同意的情况下不得将_mark账号以赠与、借用、租用、转让或其他方式处分给他人。",
+        "protoWord36_1": "用户应当遵守_mark不时发布和更新的用户协议以及其他服务条款和操作规则。",
+        "protoWord37": "四、【用户的权利和义务】",
+        "protoWord40": "用户有权按照本协议约定接受_mark提供的BTC/ETH/USDC/TUSD/USDT存储服务。",
+        "protoWord41": "用户有权随时终止使用_mark服务。",
+        "protoWord42": "用户有权随时提取在_mark的资金余额，但需向_mark支付相应的提现手续费用。",
+        "protoWord43": "用户对注册时提供的个人资料的真实性、有效性及安全性负责。",
+        "protoWord44": "用户在_mark进行数字资产存储时不得恶意干扰数字资产交易的正常进行，破坏交易秩序。",
+        "protoWord45": "用户不得以任何技术手段或其他方式干扰_mark的正常运行或干扰其他用户对_mark服务的使用。",
+        "protoWord46": "如用户因网上交易与其他用户产生诉讼的，不得通过司法或行政以外的途径要求_mark提供相关资料。",
+        "protoWord47": "用户不得以虚构事实等方式恶意诋毁_mark的商誉。",
+        "protoWord60": "五、【_mark的权利和义务】",
+        "protoWord61": "如用户不具备本协议约定的注册资格，则_mark有权拒绝用户进行注册，对已注册的用户有权注销其_mark账号，_mark因此而遭受损失的有权向前述用户或其法定代理人主张赔偿。同时，_mark保留其他任何情况下决定是否接受用户注册的权利。",
+        "protoWord62": "_mark发现账户使用者并非账户初始注册人时，有权中止该账户的使用。",
+        "protoWord63": "_mark通过技术检测、人工抽检等检测方式合理怀疑用户提供的信息错误、不实、失效或不完整时，有权通知用户更正、更新信息或中止、终止为其提供_mark服务。",
+        "protoWord64": "_mark有权在发现_mark上显示的任何信息存在明显错误时，对信息予以更正。",
+        "protoWord65": "_mark保留随时修改、中止或终止_mark服务的权利，_mark行使修改或中止服务的权利不需事先告知用户，_mark终止_mark一项或多项服务的，终止自_mark在网站上发布终止公告之日生效。",
+        "protoWord66": "_mark应当采取必要的技术手段和管理措施保障_mark的正常运行，并提供必要、可靠的交易环境和交易服务，维护数字资产存储及交易秩序。",
+        "protoWord67": "_mark通过加强技术投入、提升安全防范等措施保障用户的人民币资金及数字资产托管安全，有义务在用户资金出现可以预见的安全风险时提前通知用户。",
+        "protoWord68": "_mark有权在本协议履行期间及本协议终止后保留用户的注册信息及用户应用_mark服务期间的全部交易信息，但不得非法使用该等信息。",
+        "protoWord69": "_mark有权随时删除_mark网站内各类不符合国家法律法规、规范性文件或_mark网站规定的用户评价等内容信息，_mark行使该等权利不需提前通知用户。",
+        "protoWord75": "六、【特别声明】",
+        "protoWord76": "在法律允许的范围内，不论在何种情况下，_mark对由于信息网络设备维护、信息网络连接故障、电脑、通讯或其他系统的故障、电力故障、罢工、劳动争议、暴乱、起义、骚乱、生产力或生产资料不足、火灾、洪水、风暴、爆炸、战争、政府行为、司法行政机关的命令、其他不可抗力或第三方的不作为而造成的不能服务或延迟服务，以及用户因此而遭受的损失不承担责任。",
+        "protoWord77": "七、【知识产权】",
+        "protoWord78": "_mark所包含的全部智力成果包括但不限于网站标志、数据库、网站设计、文字和图表、软件、照片、录像、音乐、声音及其前述组合，软件编译、相关源代码和软件 (包括小应用程序和脚本)的知识产权权利均归_mark所有。用户不得为商业目的复制、更改、拷贝、发送或使用前述任何材料或内容。",
+        "protoWord79": "_mark名称中包含的所有权利 (包括但不限于商誉和商标、标志) 均归DEEP NET INFORMATION TECHNOLOGY所有。",
+        "protoWord80": "用户接受本协议即视为用户主动将其在_mark发表的任何形式的信息的著作权，包括但不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权以及应当由著作权人享有的其他可转让权利无偿独家转让给_mark所有，_mark有权利就任何主体侵权单独提起诉讼并获得全部赔偿。",
+        "protoWord80_1": "用户在使用_mark服务过程中不得非法使用或处分_mark或他人的知识产权权利。用户不得将已发表于_mark的信息以任何形式发布或授权其它网站（及媒体）使用。",
+        "protoWord81": "八、【客户服务】",
+        "protoWord82": "_mark建立专业的客服团队，并建立完善的客户服务制度，从技术、人员和制度上保障用户提问及投诉渠道的畅通，为用户提供及时的疑难解答与投诉反馈。",
+        "protoWord83": "九、【协议的变更和终止】",
+        "protoWord84": "协议的变更_mark有权随时对本协议内容或_mark发布的其他服务条款及操作规则的内容进行变更，变更时_mark将在_mark站内显著位置发布公告，变更自公告发布之时生效，如用户继续使用_mark提供的服务即视为用户同意该等内容变更，如用户不同意变更后的内容则用户有权注销_mark账户、停止使用_mark服务。",
+        "protoWord85": "协议的终止",
+        "protoWord86": "_mark有权依据本协议约定注销用户的_mark账号，本协议于账号注销之日终止。",
+        "protoWord87": "_mark有权依据本协议约定终止全部_mark服务，本协议于_mark全部服务终止之日终止。",
+        "protoWord88": "本协议终止后，用户无权要求_mark继续向其提供任何服务或履行任何其他义务，包括但不限于要求_mark为用户保留或向用户披露其原_mark账号中的任何信息，向用户或第三方转发任何其未曾阅读或发送过的信息等。",
+        "protoWord89": "本协议的终止不影响守约方向违约方追究违约责任。",
+        "protoWord90": "十、【争议解决】",
+        "protoWord91": "用户与_mark因本协议的履行发生争议的应通过友好协商解决，协商解决不成的，任一方有权将争议提交本地仲裁委员会依据该会仲裁规则进行仲裁。",
+        "protoWord92": "十、【协议的生效和解释】",
+        "protoWord93": "本协议于用户点击_mark注册页面的同意注册并完成注册程序、获得_mark账号和密码时生效，对_mark和用户均具有约束力。"
+    }
 }
