--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -170,8 +170,8 @@
         "changePwdTip": "修改登录密码",
         "verLv1Tip": "请填写本人身份证信息。",
         "verLv2Tip": "请上传本人身份证正反及本人手持身份证照片。",
-        "verLv3Tip1": "我是***，证件号码是：545645645645.我自愿在_mark注册交易，并确保账号是本人使用。",
-        "verLv3Tip2": "我确保所有资金来源合法，已经了解并能承受全部交易风险，提取数字资产不做非法使用，也不会用本平台进行任何非法活动，例如洗钱，传销，和非法兑换外币等。"
+        "verLv3Tip1": "我是***，证件号是：*************** 我自愿在BagPay注册交易，并确认账号是本人 使用。",
+        "verLv3Tip2": "我确保所有资金来源合法，已经了解并能承受全 部交易风险，提取数字资产不做非法使用，也 不会用本平台进行任何非法活动，例如洗钱，传销，和非法兑换外币等"
     },
     "payway": {
         "addpay": "添加收付款方式",
