--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -103,6 +103,7 @@
         "loginTitle": "登录账号",
         "loginTip": "你将会拥有多链钱包",
         "phone": "手机号",
+        "registTip": "注册及同意",
         "email": "邮箱",
         "password": "登录密码",
         "oldPwd": "旧密码",
@@ -302,7 +303,7 @@
         "pwdErr": "请输入大于6位小于16位字母或数字的密码",
         "pwd2Err": "两次密码输入不一致",
         "emailErr": "请输入正确的邮箱",
-        "icCardErr": "请输入正确的身份证号",
+        "idCardErr": "请输入正确的身份证号",
         "nameErr": "请输入真实姓名",
         "payErr": "请输入6位数字密码",
         "codeErr": "请输入4位数字验证码",
