--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -41,8 +41,9 @@
         "screen": "筛选",
         "poptip": "温馨提示",
         "waitSend": "等待发送",
-        "waitReview": "等待审核",
-        "waitComfirm": "等待确认",
+        "waitReview": "等待确认",
+        "abnormal": "异常",
+        "waitComfirm": "已到账",
         "sending": "发送中",
         "sented": "已发送",
         "canceled": "已取消",
