--- a/src/assets/lang/zh-cn.json
+++ b/src/assets/lang/zh-cn.json
@@ -41,7 +41,7 @@
         "screen": "筛选",
         "poptip": "温馨提示",
         "waitSend": "等待发送",
-        "waitReview": "等待确认",
+        "waitReview": "等待审核",
         "abnormal": "异常",
         "waitComfirm": "已到账",
         "sending": "发送中",
